--- a/include/candl/macros.h.in
+++ b/include/candl/macros.h.in
@@ -55,7 +55,7 @@
 # define CANDL_TEMP_OUTPUT "candl.temp"
 
 # define CANDL_RELEASE "@PACKAGE_VERSION@"
-# define CANDL_VERSION "@BITS@"
+# define CANDL_VERSION "candl@BITS@"
 @DEFINE_HAS_ISL_LIB@
 
 /* Useful macros. */
@@ -92,72 +92,39 @@
 
 # define CANDL_fail(msg)   { fprintf(stderr, "[Candl] " msg "\n"); exit(1); }
 
-/******************************************************************************
- *                                   FORMAT                                   *
- ******************************************************************************/
-#if defined(LINEAR_VALUE_IS_LONGLONG)
-#define CANDL_FMT "%4lld "
-#elif defined(LINEAR_VALUE_IS_LONG)
-#define CANDL_FMT "%4ld "
-#else  /* GNUMP */
-#define CANDL_FMT "%4s"
-#endif
 
-/******************************************************************************
- *                             CANDL GMP MACROS                               *
- ******************************************************************************/
-#ifdef LINEAR_VALUE_IS_MP
-/* Basic Macros */
-#define CANDL_init(val)                (mpz_init((val)))
-#define CANDL_assign(v1,v2)            (mpz_set((v1),(v2)))
-#define CANDL_set_si(val,i)            (mpz_set_si((val),(i)))
-#define CANDL_get_si(val)              (mpz_get_si((val)))
-#define CANDL_clear(val)               (mpz_clear((val)))
-#define CANDL_print(Dst,fmt,val)       { char *str; \
-                                         str = mpz_get_str(0,10,(val)); \
-                                         fprintf((Dst),(fmt),str); free(str); \
-                                       }
+// PipLib types
+typedef piplib_int_t@BITS@ piplib_int_t;
+typedef PipMatrix@BITS@ PipMatrix;
+typedef PipQuast@BITS@ PipQuast;
+typedef PipList@BITS@ PipList;
+typedef PipVector@BITS@ PipVector;
+typedef PipOptions@BITS@ PipOptions;
 
-/* Boolean operators on 'Value' or 'Entier' */
-#define CANDL_eq(v1,v2)                (mpz_cmp((v1),(v2)) == 0)
-#define CANDL_ne(v1,v2)                (mpz_cmp((v1),(v2)) != 0)
+// PipLib functions
+#define pip_options_init pip_options_init@BITS@
+#define pip_options_free pip_options_free@BITS@
+#define pip_matrix_alloc pip_matrix_alloc@BITS@
+#define pip_matrix_free  pip_matrix_free@BITS@
+#define pip_quast_init   pip_quast_init@BITS@
+#define pip_quast_free   pip_quast_free@BITS@
+#define pip_solve        pip_solve@BITS@
+#define pip_init         pip_init@BITS@
+#define pip_close        pip_close@BITS@
 
-/* Binary operators on 'Value' or 'Entier' */
-#define CANDL_increment(ref,val)       (mpz_add_ui((ref),(val),1))
-#define CANDL_decrement(ref,val)       (mpz_sub_ui((ref),(val),1))
-#define CANDL_subtract(ref,val1,val2) (mpz_sub((ref),(val1),(val2)))
-#define CANDL_oppose(ref,val)          (mpz_neg((ref),(val)))
-
-/* Conditional operations on 'Value' or 'Entier' */
-#define CANDL_zero_p(val)              (mpz_sgn(val) == 0)
-#define CANDL_notzero_p(val)           (mpz_sgn(val) != 0)
-
-/******************************************************************************
- *                          CANDL BASIC TYPES MACROS                          *
- ******************************************************************************/
-#else
-/* Basic Macros */
-#define CANDL_init(val)                ((val) = 0)
-#define CANDL_assign(v1,v2)            ((v1)  = (v2))
-#define CANDL_set_si(val,i)            ((val) = (Entier)(i))
-#define CANDL_get_si(val)              ((val))
-#define CANDL_clear(val)               ((val) = 0)
-#define CANDL_print(Dst,fmt,val)       (fprintf((Dst),(fmt),(val)))
-
-/* Boolean operators on 'Value' or 'Entier' */
-#define CANDL_eq(v1,v2)                ((v1)==(v2))
-#define CANDL_ne(v1,v2)                ((v1)!=(v2))
-
-/* Binary operators on 'Value' or 'Entier' */
-#define CANDL_increment(ref,val)       ((ref) = (val)+(Entier)(1))
-#define CANDL_decrement(ref,val)       ((ref) = (val)-(Entier)(1))
-#define CANDL_subtract(ref,val1,val2) ((ref) = (val1)-(val2))
-#define CANDL_oppose(ref,val)          ((ref) = (-(val)))
-
-/* Conditional operations on 'Value' or 'Entier' */
-#define CANDL_zero_p(val)               CANDL_eq(val,0)
-#define CANDL_notzero_p(val)            CANDL_ne(val,0)
-
-#endif
+// PipLib int functions
+#define CANDL_init(i)         piplib_int_init(i)
+#define CANDL_assign(i, v)    piplib_int_assign(i, v)
+#define CANDL_set_si(i, v)    piplib_int_set_si(i, v)
+#define CANDL_get_si(i)       piplib_int_get_si(i)
+#define CANDL_clear(i)        piplib_int_clear(i)
+#define CANDL_eq(a, b)        piplib_int_eq(a, b)
+#define CANDL_ne(a, b)        piplib_int_ne(a, b)
+#define CANDL_add(r, a, b)    piplib_int_add(r, a, b)
+#define CANDL_increment(r, i) piplib_int_increment(r, i)
+#define CANDL_decrement(r, i) piplib_int_decrement(r, i)
+#define CANDL_sub(r, a, b)    piplib_int_sub(r, a, b)
+#define CANDL_oppose(r, i)    piplib_int_oppose(r, i)
+#define CANDL_zero(i)         piplib_int_zero(i)
 
 #endif // !CANDL_MACROS_H
