Clean checking system and add valcheck (check with Valgrind)

--- a/Makefile.am
+++ b/Makefile.am
@@ -109,9 +109,13 @@ MAINTAINERCLEANFILES = \
 	$(AUX_DIST)
 
 #############################################################################
+
 dist-hook:
 	(cd $(distdir) && mkdir -p $(ac_aux_dir))
 	for file in $(AUX_DIST); do \
 	  cp $$file $(distdir)/$$file; \
 	done
 #############################################################################
+
+valcheck:
+	$(MAKE) valcheck -C tests
