Link candl against GMP in CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 	target_link_libraries(candl ${OSL_LIBRARY})
 	if (gmp_LIB)
 		target_link_libraries(candl ${PIPLIB_GMP_LIBRARY})
+                target_link_libraries(candl ${gmp_LIB})
 	else()
 		target_link_libraries(candl ${PIPLIB_DP_LIBRARY})
 	endif()
@@ -133,6 +134,7 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 	set_target_properties(candl_static PROPERTIES OUTPUT_NAME candl)
 	if (gmp_LIB)
 		target_link_libraries(candl_static ${PIPLIB_GMP_LIBRARY})
+                target_link_libraries(candl ${gmp_LIB})
 	else()
 		target_link_libraries(candl_static ${PIPLIB_DP_LIBRARY})
 	endif()
