take libcandl.la from builddir rather than from srcdir
libcandl.la is created in the builddir, which just happens to be the same
as the srcdir in case of an in-tree build.  Taking libcandl.la from
builddir also allows out-of-tree builds.

Signed-off-by: Sven Verdoolaege <skimo@kotnet.org>
Signed-off-by: Oleksandr Zinenko <zinenko@lri.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -266,7 +266,7 @@ fi
 
 dnl forcing candl to use local libcandl.la
 dnl if --prefix is not specified
-CANDL_LIBS="$srcdir/libcandl.la -lcandl"
+CANDL_LIBS="\$(top_builddir)/libcandl.la -lcandl"
 AC_SUBST(CANDL_LIBS)
 
 
