submodules: ignore untracked content

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "osl"]
 	path = osl
 	url = https://github.com/periscop/openscop.git
+	ignore = untracked
 [submodule "piplib"]
 	path = piplib
 	url = https://github.com/periscop/piplib.git
+	ignore = untracked
